test/bad/classes/super02.px

class A def
    func f(): Void def
        return

class B(A) def
    func g(): Void def
        super()
